# composo

./: .composo.yaml  .gitlab-ci.yml  MANIFEST.in  README.md  poetry.toml  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  make.bat
docs/source/: conf.py  examples.rst  index.rst  intro.rst  modules.rst
docs/source/notebooks/: simple_pipeline.ipynb
src/composo/: app.py  ioc.py  main.py
src/composo/shell/: __init__.py  plugin.py
tests/: test_app.py
